--- a/codeception.yml
+++ b/codeception.yml
@@ -1,10 +1,11 @@
 actor: Tester
-bootstrap: _bootstrap.php
 paths:
     tests: tests
     output: tests/_output
     data: tests/_data
-    helpers: tests/_support
+    support: tests/_support
+    helpers: tests/_support/Helper
+bootstrap: _bootstrap.php
 settings:
     memory_limit: 1024M
     colors: true
@@ -12,16 +13,3 @@ modules:
     config:
         Yii2:
             configFile: 'config/test.php'
-
-# To enable code coverage:
-#coverage:
-#    #c3_url: http://localhost:8080/index-test.php/
-#    enabled: true
-#    #remote: true
-#    #remote_config: '../codeception.yml'
-#    whitelist:
-#        include:
-#            - models/*
-#            - controllers/*
-#            - commands/*
-#            - mail/*
