--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,8 +18,8 @@ jobs:
           MYSQL_DATABASE: db_gerencia_test
           MYSQL_USER: admin
           MYSQL_PASSWORD: admin123
-        ports:
-          - 3306:3306
+        #ports:
+        #  - 3306:3306
         options: >-
           --health-cmd="mysqladmin ping -h localhost"
           --health-interval=10s
