--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -10,45 +10,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: db_gerencia
-          MYSQL_USER: admin
-          MYSQL_PASSWORD: admin123
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost -u root -ppassword"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Configurar PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.1'
-          extensions: mbstring, pdo, pdo_mysql, xml
-
-      - name: Instalar dependências
-        run: composer install --prefer-dist --no-interaction --no-progress
-
-      - name: Configurar ambiente de teste
-        run: |
-          cp .env.test .env
-          # Ou configure as variáveis de ambiente manualmente
-          echo "DB_DSN=mysql:host=127.0.0.1;port=3306;dbname=db_gerencia" >> .env
-          echo "DB_USERNAME=admin" >> .env
-          echo "DB_PASSWORD=admin123" >> .env
+      - name: Subir containers
+        run: docker compose -f docker-compose.yml up -d
 
       - name: Aguardar MySQL ficar disponível
         run: |
           for i in {1..30}; do
-            if mysqladmin ping -h 127.0.0.1 -u admin -padmin123 --silent; then
+            if docker compose exec -T db mysqladmin ping -h localhost -u admin -padmin123 --silent; then
               echo "MySQL está pronto"
               break
             fi
@@ -56,8 +28,11 @@ jobs:
             sleep 2
           done
 
+      - name: Instalar dependências PHP
+        run: docker compose exec -T php composer install --prefer-dist --no-interaction --no-progress
+
       - name: Rodar migrations
-        run: php yii migrate --interactive=0
+        run: docker compose exec -T php php yii migrate --interactive=0
 
       - name: Rodar testes Codeception
-        run: vendor/bin/codecept run
+        run: docker compose exec -T php vendor/bin/codecept run
